# MELI

./: LICENSE  README.md  main.py  pyproject.toml
artifacts/: final_model.json
artifacts/pipelines/: pipeline_feature_selection.pkl
config/: config.py  config.toml  features_names.yaml  logger_settings.py  model_settings.py
docs/: features.json
models/artifacts/: final_model.json
notebooks/experiments/: 01_preprocessing.ipynb  02_feature_engineering.ipynb  03_hyperparameter_tunning.ipynb  04_calibration.ipynb  04_interpretability_and_results.ipynb
notebooks/exploration/: 01_exp_inicial.ipynb  02_analisis_negocio.ipynb  03_eda.ipynb
src/data_prep/: preprocessors.py
src/dataset/: ashld.ipynb  fetch_data.py
src/features/: engineering.py  preprocessing.py  selection.py  split.py
src/models/: evaluate.py  save.py  service_build.py  train.py
src/pipelines/: feature_engineering_pipeline.pkl  pipeline_feature_engineering.pkl  pipeline_preprocessing.pkl
src/utils/: utils_fn.py
